<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HelloworldActivity!</string>
    <string name="app_name">Helloworld</string>
	<string-array name="test_array">
	    <item>1</item>
	    <item>2</item>
	</string-array>
	<string name="testmyster">哈哈哈可算是会造参数了</string>
	<string name="user">用户名:</string>
	<string name="password">密     码:</string>
	<string name="login">登录</string>
	<string name="cancel">取消</string>
</resources>