<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:test ="http://schemas.android.com/com.hello.extend.view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/testmyster" />
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        
        <TableRow >
            <TextView 
                android:text="@string/user"
                android:layout_width="0dp"
				android:layout_weight="1"
                />
            <EditText 
                android:id="@+id/textUser"
                android:inputType="text"
                android:layout_width="0dp"
				android:layout_weight="4"
                />
        </TableRow>
        <TableRow >
             <TextView 
                android:text="@string/password"
                android:layout_width="0dp"
				android:layout_weight="1"/>
             
            <EditText 
                android:id="@+id/textPwd"
                android:inputType="textPassword"
                android:layout_width="0dp"
				android:layout_weight="4"/>d
        </TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal">"
                "
			<Button 
			    android:id="@+id/login"
			    android:text="@string/login"
			    android:background="#3399cc"
			    android:layout_width="wrap_content"
                android:layout_height="30dp"
			    />
			<Button 
			    android:id="@+id/cancel"
			   	android:layout_width="wrap_content"
                android:layout_height="30dp"
			    android:text="@string/cancel"
			    android:background="#3399cc"
			    android:layout_marginLeft="30dp"/>
			<Button 
			    android:id="@+id/talk"
			   	android:layout_width="wrap_content"
                android:layout_height="30dp"
			    android:text="talk"
			    android:background="#3399cc"
			    android:layout_marginLeft="30dp"/>
			<Button 
			    android:id="@+id/fragment"
			   	android:layout_width="wrap_content"
                android:layout_height="30dp"
			    android:text="fragment"
			    android:background="#3399cc"
			    android:layout_marginLeft="30dp"/>
			</LinearLayout>
    </TableLayout>
   	
</LinearLayout>